--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -70,6 +70,8 @@
                         urlGetCityGroups: '@Url.Action("GetCityGroups", "ApiCity")',
                         urlSaveCityGroups: '@Url.Action("SaveCityGroups", "ApiCity")',
                         urlGetAllCityStuff: '@Url.Action("GetAllCityStuff", "ApiCity")',
+                        urlGetAddresses: '@Url.Action("GetAddresses", "ApiAddress")',
+                        urlSaveAddresses: '@Url.Action("SaveAddresses", "ApiAddress")',
 
                         lbl_Name: ('@Html.GetLabel("lbl_Name")').encodeHtml(),
                         lbl_FullName: ('@Html.GetLabel("lbl_FullName")').encodeHtml(),
@@ -88,6 +90,9 @@
                         lbl_ReSnd: ('@Html.GetLabel("lbl_ReSnd")').encodeHtml(),
                         lbl_CnclCnfrmtn: ('@Html.GetLabel("lbl_CnclCnfrmtn")').encodeHtml(),
                         lbl_Clnts: ('@Html.GetLabel("lbl_Clnts")').encodeHtml(),
+                        lbl_Clnt: ('@Html.GetLabel("lbl_Clnt")').encodeHtml(),
+                        lbl_City: ('@Html.GetLabel("lbl_City")').encodeHtml(),
+                        lbl_Category: ('@Html.GetLabel("lbl_Category")').encodeHtml(),
                         lbl_Pgs: ('@Html.GetLabel("lbl_Pgs")').encodeHtml(),
                         lbl_Pg: ('@Html.GetLabel("lbl_Pg")').encodeHtml(),
                         lbl_of: ('@Html.GetLabel("lbl_of")').encodeHtml(),
@@ -119,6 +124,13 @@
                         lbl_CityFrRgn: ('@Html.GetLabel("lbl_CityFrRgn")').encodeHtml(),
                         lbl_CityFrDst: ('@Html.GetLabel("lbl_CityFrDst")').encodeHtml(),
                         lbl_CityFrGrp: ('@Html.GetLabel("lbl_CityFrGrp")').encodeHtml(),
+                        lbl_FbFans: ('@Html.GetLabel("lbl_FbFans")').encodeHtml(),
+                        lbl_Rating: ('@Html.GetLabel("lbl_Rating")').encodeHtml(),
+                        lbl_RatingCount: ('@Html.GetLabel("lbl_RatingCount")').encodeHtml(),
+                        lbl_Ovrd: ('@Html.GetLabel("lbl_Ovrd")').encodeHtml(),
+                        lbl_CvltMr: ('@Html.GetLabel("lbl_CvltMr")').encodeHtml(),
+                        lbl_CvltMiss: ('@Html.GetLabel("lbl_CvltMiss")').encodeHtml(),
+                        lbl_CvltMme: ('@Html.GetLabel("lbl_CvltMme")').encodeHtml(),
 
                         erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
 
