--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Categories.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Categories.html
@@ -6,7 +6,7 @@
         <div class="modal-header">
 
             <div>
-                <h3 class="findme-color-fc-pink">{{vm.appProps.lbl_Delete}} {{(vm.category.legalName || vm.category.dispName ? (vm.category.legalName ? vm.category.legalName : vm.category.dispName) : 'New Category')}}?</h3>
+                <h3 class="findme-color-fc-pink">{{vm.appProps.lbl_Delete}} {{vm.category.name}}</h3>
             </div>
 
         </div>
